<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="loginFragment"
            type="com.baseprojectmvvm.ui.onboarding.login.LoginFragment" />

        <variable
            name="viewModel"
            type="com.baseprojectmvvm.ui.onboarding.login.LoginViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:padding="10dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_email"
                style="@style/EditTextStyle"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:maxLength="@integer/length_email"
                android:text="@={viewModel.user.email}" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_password"
                style="@style/EditTextStyle"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLength="@integer/length_password"
                android:text="@={viewModel.user.password}" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_20sdp"
                android:onClick="@{() -> viewModel.doLogIn()}"
                android:text="@string/action_login" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_20sdp"
                android:onClick="@{() -> loginFragment.openSignUpFragment()}"
                android:text="@string/action_signup" />

            <!--            <androidx.appcompat.widget.AppCompatTextView-->
            <!--                android:id="@+id/tv_forgot_password"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_gravity="center_horizontal"-->
            <!--                android:layout_marginTop="@dimen/_10sdp"-->
            <!--                android:onClick="@{() -> loginFragment.openForgotPasswordFragment()}"-->
            <!--                android:text="@string/action_forgot_password"-->
            <!--                android:textColor="@color/black" />-->

        </androidx.appcompat.widget.LinearLayoutCompat>

    </RelativeLayout>
</layout>